apps/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.stonegarden.dev`)
      kind: Rule
      services:
        - name: jellyfin-svc
          port: 8096
